--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
+  "main": "index.js",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.6.3",
