set up home and about

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "author": "Sabine Hollatz",
+  "license": "Copyright, please contact for further information",
   "proxy": "http://localhost:3001/",
   "main": "index.js",
   "dependencies": {
