--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "heroku-postbuild": "yarn build"
   },
   "engines": {
-    "node": "8.12.0",
-    "yarn": "1.10.0"
+    "node": "10.14.1",
+    "yarn": "1.12.3"
   },
   "author": "Sabine Hollatz",
-  "license": "Copyright, please contact for further information",
+  "license": "UNLICENSED",
   "devDependencies": {
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0"
